@@ -1,12 +1,28 @@
-import compilation.Compilation;
+import javafx.application.Application;
+import javafx.stage.Stage;
+import ui.ConsoleManager;
+import ui.StageManager;
 
-public class Main
+import java.io.IOException;
+
+public class Main extends Application
 {
     public static void main(String[] args)
     {
-        boolean devMode = args.length > 0 && args[0].equals("dev");
+        boolean consoleMode = args.length > 0 && args[0].equals("console");
 
-        Compilation compilation = new Compilation();
-        compilation.run(devMode);
+        if (consoleMode)
+            ConsoleManager.startConsole();
+        else
+            Application.launch();
+    }
+
+    @Override
+    public void start(Stage primaryStage) throws IOException
+    {
+        StageManager stageManager = new StageManager();
+        stageManager.startMainStage(primaryStage);
     }
 }
+
+// VM Options: --module-path lib/openjfx-11.0.2_linux-x64_bin-sdk/javafx-sdk-11.0.2/lib --add-modules javafx.controls,javafx.fxml
